Applied global styles, fixed button left align bugs
- added margin to global styles. it's at .7em because
	- erased margin from
	- added a global style for "alternate header" which can be used
	  as a global class that colors the header an alternate color
	  (black): yet to apply these global styles to more areas in the
	  site.
		- currently applied to value card on about us page
- changed order of stylesheets (App.css, boostrap) to override bootstrap
- removed index.css because it had
   no impact.
- removed import to index.css
- re-centered buttons on home page and apply page with text-align styles
- adjusted margin for aboutus page
- nonprofit apply page: added styling for padding mobile
- student apply page: centered paragraph

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Karla');
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 
-/* #bootstrap-overrides h1, h2, h3 {
-  font-weight: 700;
-} */
-
 h1, h2, h3 {
-  font-weight: 700 !important;
+  font-weight: 700;
 }
 
 h1 {
@@ -25,10 +21,15 @@ h2 {
   font-style: normal;
   font-size: 34px;
   line-height: 40px;
+  margin-bottom: .7em;
 
   letter-spacing: -0.02em;
 
   color: #0069CA;
+}
+
+.alternateHeader {
+  color: #333333;
 }
 
 h3 {
