--- a/frontend/src/styles/home/FeaturedProjects.module.css
+++ b/frontend/src/styles/home/FeaturedProjects.module.css
@@ -5,7 +5,6 @@
   margin-top: -25%;
 }
 
-.bluebtn {
-  margin: 0 auto;
-  display: block;
+.seeMore {
+  text-align: center;
 }
