--- a/frontend/src/styles/home/HomePageTop.module.css
+++ b/frontend/src/styles/home/HomePageTop.module.css
@@ -29,7 +29,7 @@
   width: 50%;
   margin: auto;
   text-align: center;
-  padding-top: 1%;
+  margin-bottom: 3em;
 }
 
 /*fix overlaym*/
